src/harness/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_exec_and_status_layout_vt100_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---




























• I’m going to search the repo for where “Change Approved” is rendered to update
  that view.

$ rg "Change Approved"
✓ • 16.00s

• Investigating rendering code (0s • esc to interrupt)


› Summarize recent commits

  gpt-5.3-codex · 100% left · ~/Workspace/codey/src/harness/tui
